--- a/uchinchi-vazifa/index.html
+++ b/uchinchi-vazifa/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  blaalbalbalbalbal
+  
   <script src="script.js"></script>
+  <script src="arrey.js"></script>
 </body>
 </html>
