--- a/uchinchi-vazifa/index.html
+++ b/uchinchi-vazifa/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
   <script src="arrey.js"></script>
+  <!-- <script scr="arrey.js"></script> -->
 </body>
 </html>
