--- a/uchinchi-vazifa/index.html
+++ b/uchinchi-vazifa/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  blablabla
   <!-- <script src="script.js"></script> -->
   <script src="arrey.js"></script>
   <!-- <script scr="arrey.js"></script> -->
