--- a/Array-1/index.html
+++ b/Array-1/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>dssssssssssssssss
+  sdcwsdfwefewferwf
   <script src="arrey.js"></script>
 </body>
 </html>
